templates/sass/style.scss
/* bourbon/neat dependency */
@import "lib/bourbon/bourbon";
@import "lib/neat/neat";

/* bower-managed dependencies */
@import "CSS:lib/morrisjs/morris";
@import "CSS:lib/leaflet.fullscreen/Control.FullScreen";
@import "CSS:lib/Leaflet.awesome-markers/leaflet.awesome-markers";

/* breakpoints for screen sizes */
$widescreen: new-breakpoint(min-width 1050px);
$mobile: new-breakpoint(max-width 720px);

/* colors */
$default-background-color: #ffffff;


body {
    height: 101%;

    font-family: 'Open Sans', sans-serif;
    font-color: #333;

    background-color: #ffffff;
    @include media($widescreen) {
        background-color: #eeeeee;
    }
}

a, a:hover { color: #333; }

p {
    line-height: 1.4em;
    font-size: 1.25em;
}


/* structure */

.wrap {
    @include outer-container();
    margin: 15px auto 30px auto;
    padding: 10px 10px 10px 10px;
    background-color: #ffffff;

    @include media($widescreen) {
        padding: 20px 30px 40px 30px;
    }

    .map {
        @include span-columns(12);
        @include omega();

        height: 460px;
        @include media($widescreen) {
            height: 560px;
        }
        @include media($mobile) {
            height: 360px;
        }
    }

    .content {
        @include span-columns(12);

        .copy {
            @include span-columns(6);

            @include media($mobile) {
                @include span-columns(12);
            }

            .one-column-copy {
                display: none;
                @include media($mobile) {
                    display: inline;
                }
            }

            .two-column-copy {
                display: inline;
                @include media($mobile) {
                    display: none;
                }
            }
        }

        .chart {
            @include span-columns(6);
            @include omega();

            @include media($mobile) {
                @include span-columns(12);
            }

            .outage-chart {
                height: 240px;
                width: 95%;
            }
        }
    }

    .footer {
        margin-top: 20px;
        @include span-columns(12);
        @include omega();

        @include media($widescreen) {
            margin-top: 20px;
        }
    }
}


/* style for marker popups */

.leaflet-popup-content {
    padding: 0 0 0 0;
    margin: 0 10px 10px 10px;
    width: 280px;

    @include media($mobile) {
        margin: 0 10px 0 10px;
        width: 200px;
    }
    @include media($widescreen) {
        margin: 5px 15px 15px 15px;
        width: 380px;
    }
}

.markerBox {
    @include media($widescreen) {
        font-size: 1.1em;
    }
    @include media($mobile) {
        font-size: .9em;
    }

    h2 { margin: 0; padding: 0; font-size: 1.1em; }
    h4 { margin: 0; padding: 0; font-size: 1em;}

    .markerTimelineHeader {
        padding-right: 10px;
        font-size: .9em;
        text-align: right;
        margin-top: 10px;
        margin-bottom: -8px;
        @include media($mobile) {
            padding-right: 10px;
        }
    }

    .markerTimeline {
        width: 96%;
        margin: 0 auto 0 auto;
        padding: 0;
        clear: both;
        height: 110px;
        @include media($widescreen) {
            height: 130px;
        }
        @include media($mobile) {
            margin-bottom: 12px;
        }
    }

    .markerGraphHeader {
        padding-right: 10px;
        font-size: .9em;
        text-align: right;
        margin-top: 10px;
        margin-bottom: -8px;
        @include media($mobile) {
            display: none;
        }
    }

    .markerGraph {
        width: 96%;
        margin: 0 auto 0 auto;
        padding: 0;
        clear: both;
        height: 110px;
        @include media($mobile) {
            display: none;
        }
    }
}

